# cardia

./: Cargo.toml  readme.md
app/local/: Cargo.toml
app/local/src/: main.rs  wave_function_analysis.py
app/local/ui/: app.slint
engine/fluid/: Cargo.toml
engine/fluid/shaders/: atom.wgsl  atom_observer.wgsl  biot_savart_trefoil.wgsl  density_velocity_raymarch.wgsl  double_slit.wgsl  gp_3d.wgsl  init_atoms.wgsl  lbm_3d.wgsl  lbm_3d_commented.wgsl  metrics.wgsl  phase_angle_raymarch.wgsl  rr_lbm.wgsl  speed.wgsl  volume_raymarch.wgsl  volume_texture_extraction.wgsl  zpe_sower.wgsl
engine/fluid/src/: engine.rs  lib.rs  logger.rs
