[package]
name = "soup"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
wgpu = "29.0.3"
glam = { version = "0.32.1" , features = ["bytemuck"] }
chrono = "0.4.44"
image = "0.25.10"
rayon = "1.12.0"
#rand = "0.9.4"
sysinfo = "0.39.3"
half = { version = "2.7.1", features = ["bytemuck"] }

#rand = "0.9.4"